--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
     <section>
         <!-- Landing Page  -->
-         <header>
-            <div><h2>Meenakshi Yadav</h2></div>
-            <div><p>Home</p>
-            <p>Artwork</p>
-            <p> About</p>
-            <p>Contact</p>
-        </div>
-         </header>
+         <nav>
+            <div class="logo"><h2>Meenakshi Yadav</h2></div>
+                <a href="#" class="active">Home</a>
+                <a href="#">Art Works</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <button>&#x1F50E;&#xFE0E;	</button>
+                <button class="shop button">Shop</button>
+         </nav>
     </section>
     <section>
         <!-- Aboout -->
